--- a/lang/en.json
+++ b/lang/en.json
@@ -67,6 +67,28 @@
   "DEBUG": "Debug",
   "WARNING": "Warning",
   "ERROR": "Error",
-  "CRITICAL": "Critical"
+  "CRITICAL": "Critical",
+  "tasks.title": "Scheduled Tasks",
+  "tasks.name": "Name",
+  "tasks.last_run": "Last run",
+  "tasks.next_run": "Next run",
+  "tasks.action": "Action",
+  "tasks.run": "Run",
+  "task.disable_expired_users": "Disable expired users",
+  "task.sync_users": "Plex users sync",
+  "task.check_servers": "Server check",
+  "task.send_reminders": "Send reminders",
+  "task.backup": "Backup",
+  "task.delete_expired_users": "Delete expired users",
+  "task.check_libraries": "Clean up libraries",
+  "task.update_user_status": "Users status update",
+  "active": "Active",
+  "pre_expired": "Notice",
+  "relance": "Reminder",
+  "expired": "Expired",
+  "invited": "Invited",
+  "unfriended": "Unfriended",
+  "suspended": "Suspended",
+  "unknown": "Unknown"
 
 }
