--- a/lang/fr.json
+++ b/lang/fr.json
@@ -67,6 +67,28 @@
   "DEBUG": "Debug",
   "WARNING": "Avertissement",
   "ERROR": "Erreur",
-  "CRITICAL": "Critique"
+  "CRITICAL": "Critique",
+  "tasks.title": "Tâches planifiées",
+  "tasks.name": "Nom",
+  "tasks.last_run": "Dernière exécution",
+  "tasks.next_run": "Prochaine exécution",
+  "tasks.action": "Action",
+  "tasks.run": "Exécuter",
+  "task.disable_expired_users": "Désactivation des utilisateurs expirés",
+  "task.sync_users": "Synchronisation des utilisateurs Plex",
+  "task.check_servers": "Vérification des serveurs",
+  "task.send_reminders": "Envoi des rappels",
+  "task.backup": "Sauvegarde",
+  "task.delete_expired_users": "Suppression des utilisateurs expirés",
+  "task.check_libraries": "Nettoyage des bibliothèques",
+  "task.update_user_status": "Mise a jour des status utilisateurs",
+  "active": "Actif",
+  "pre_expired": "Préavis",
+  "relance": "Relance",
+  "expired": "Expiré",
+  "invited": "Invité",
+  "unfriended": "Retiré",
+  "suspended": "Suspendu",
+  "unknown": "Inconnu"
 
 }
